--- a/Secrets.html
+++ b/Secrets.html
@@ -8,9 +8,10 @@
 <h1> SECRETS </h2>
 
 <ul>
-    <li> I'd rather build stuff than play board games </li>
+    <li> I'd rather build things than play board games </li>
     <li> I want to buy a pottery wheel </li>
     <li> I do not like honey </li>
+    <li> I do not like green peppers </li>
 </ul>
 
 <a href="Home.html">HOME </a>
