fixed some links! because I changed home to index… duh

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 <img src="images/Contact_Me_image.png" alt= "a hand holding a cell phone" />
 
 
-<a href="Home.html">HOME</a>
+<a href="index.html">HOME</a>
 
 </body>
 </html>
