--- a/Secrets.html
+++ b/Secrets.html
@@ -14,7 +14,7 @@
     <li> I do not like green peppers </li>
 </ul>
 
-<a href="Home.html">HOME </a>
+<a href="index.html">HOME </a>
 
 </body>
 </html>
