--- a/Work.html
+++ b/Work.html
@@ -9,7 +9,7 @@
 <img src="images/My_Work_page_image.png" alt="colorful sticky notes on the table each one represents a work project" />
 
 
-<a href="Home.html">HOME</a>
+<a href="index.html">HOME</a>
 
 
 </body>
