--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
 
 <img src="images/About_Me_page_image.png" alt="a drawing of a human cat with a sharpie next to it" />
 
-<a href="Home.html">HOME </a>
+<a href="index.html">HOME </a>
 
 </body>
 </html>
