--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
-
 <html>
+
 <head>
     <title>Andrea's home page</title>
-</head>
-<body>
-<h1> Andrea Everman </h1>
+    <link rel="stylesheet" href="assests/css/style.css" </head>
 
-<img src="images/Homepage_image.png" alt="a small house shape papercut lying on a plastic cutting mat" />
+    <body>
+        <h1> Andrea Everman </h1>
 
-    <p> 
-        <a href="About.html">ABOUT </a>
-        <a href="Work.html">WORK </a>
-        <a href="Contact.html">CONTACT </a> 
-        <a href="Secrets.html">SECRETS </a>          
-    </p>
+        <img src="images/Homepage_image.png" alt="a small house shape papercut lying on a plastic cutting mat" />
 
-</body>
+        <p>
+            <a href="About.html">ABOUT </a>
+            <a href="Work.html">WORK </a>
+            <a href="Contact.html">CONTACT </a>
+            <a href="Secrets.html">SECRETS </a>
+        </p>
+
+        <p>
+            This is a regular paragraph.
+        </p>
+
+        <p class="andrea">
+            This paragraph has the andrea class.            
+        </p>
+
+        <p id="example" class="andrea">
+            This paragraph has the andrea class and the example ID.
+        </p>
+
+        <p>
+            This is a regular paragraph.
+        </p>
+        
+    </body>
+
 </html>
