I added CSS changes- now all my titles are salmon and sans-serif!

--- a/About.html
+++ b/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Andrea's About page</title>
+    <link rel="stylesheet" href="assests/css/style.css" </head>
 </head>
 <body>
 
