--- a/Secrets.html
+++ b/Secrets.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Andrea's secrets page</title>
+    <link rel="stylesheet" href="assests/css/style.css" </head>
 </head>
 
 <body>
