--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         </p>
 
         <p>
-            This is a regular paragraph.
+            This is a regular paragraph. It's got a 10px of padding all around and 1px black border.
         </p>
 
-        <p class="andrea">
-            This paragraph has the andrea class.            
+        <p class="airytop">
+            This paragraph has the airytop class. See all that space above this box?            
         </p>
 
-        <p id="example" class="andrea">
-            This paragraph has the andrea class and the example ID.
+        <p id="bigborder" class="airytop">
+            This paragraph has the airytop class and the bigborder ID.
         </p>
 
         <p>
-            This is a regular paragraph.
+            This is a regular paragraph. It's just to compare against the paragraph above.
         </p>
         
     </body>
