Added bootstrap- CDN link and had to install Jquery, added the zoom viewport meta tag into the heads, added responsive columns to the SECRETS page. NOTE- gave up on Nav bar because it required so many confusing plugins!

--- a/Secrets.html
+++ b/Secrets.html
@@ -1,19 +1,43 @@
 <html>
 <head>
     <title>Andrea's secrets page</title>
-    <link rel="stylesheet" href="assests/css/style.css" </head>
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="assets/css/style.css" </head>
 </head>
 
 <body>
 
 <h1> SECRETS </h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      I'd rather build things than play board games
+    </div>
+    <div class="col-md-4">
+     I want to buy a pottery wheel
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+  I do not like honey
+    </div>
+    <div class="col-md-4">
+   I do not like green peppers
+    </div>
+  </div>
+</div>
 
-<ul>
-    <li> I'd rather build things than play board games </li>
-    <li> I want to buy a pottery wheel </li>
-    <li> I do not like honey </li>
-    <li> I do not like green peppers </li>
-</ul>
 
 <a href="index.html">HOME </a>
 
