last connection links for FURFACTOR

--- a/FURFACTOR/FURFACTOR furry crazy cat.html
+++ b/FURFACTOR/FURFACTOR furry crazy cat.html
@@ -12,7 +12,12 @@
 
 
 
-<a href="index.html">HOME </a>
+
+<a class="link-left" href="FURFACTOR neutral crazy cat.html">LESS FURRY </a>
+
+<a class="link-bottom" href="FURFACTOR furry neutral cat.html">MORE SLEEPY </a>
+
+
 
 </body>
 </html>
