--- a/FURFACTOR/FURFACTOR furry neutral cat.html
+++ b/FURFACTOR/FURFACTOR furry neutral cat.html
@@ -12,13 +12,11 @@
 
 
 
+<a class="link-top" href="FURFACTOR furry crazy cat.html">MORE CRAZY </a>
 
+<a class="link-left" href="FURFACTOR neutral neutral cat.html">LESS FURRY </a>
 
-<a href="FURFACTOR furry crazy cat.html">MORE CRAZY </a>
-
-<a href="FURFACTOR neutral neutral cat.html">LESS FURRY </a>
-
-<a href="FURFACTOR furry sleepy cat.html">MORE SLEEPY </a>
+<a class="link-bottom" href="FURFACTOR furry sleepy cat.html">MORE SLEEPY </a>
 
 </body>
 </html>
