--- a/FURFACTOR/FURFACTOR furry sleepy cat.html
+++ b/FURFACTOR/FURFACTOR furry sleepy cat.html
@@ -12,7 +12,11 @@
 
 
 
-<a href="index.html">HOME </a>
+<a class="link-top" href="FURFACTOR furry neutral cat.html">MORE CRAZY </a>
+
+<a class="link-left" href="FURFACTOR neutral sleepy cat.html">LESS FURRY </a>
+
+
 
 </body>
 </html>
