--- a/FURFACTOR/FURFACTOR index.html
+++ b/FURFACTOR/FURFACTOR index.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-  <img src="images/Homepage_image.png" class="full-screen" />
+  <img src="images/Cat Fur image.jpeg" class="full-screen" />
 
 <h1> IM READY TO LOOK AT CATS </h2>
 
 
 
-<a href="index.html">HOME </a>
+<a class="link-top" href="FURFACTOR neutral neutral cat.html">LETS DO THIS </a>
 
 </body>
 </html>
