--- a/FURFACTOR/FURFACTOR neutral crazy cat.html
+++ b/FURFACTOR/FURFACTOR neutral crazy cat.html
@@ -12,7 +12,13 @@
 
 
 
-<a href="index.html">HOME </a>
+<a class="link-left" href="FURFACTOR sleek crazy cat.html">MORE SLEEK </a>
+
+<a class="link-right" href="FURFACTOR furry crazy cat.html">MORE FURRY </a>
+
+<a class="link-bottom" href="FURFACTOR neutral neutral cat.html">MORE SLEEPY </a>
+
+
 
 </body>
 </html>
