--- a/FURFACTOR/FURFACTOR neutral neutral cat.html
+++ b/FURFACTOR/FURFACTOR neutral neutral cat.html
@@ -12,16 +12,13 @@
 
 
 
-<a href="index.html">HOME </a>
+<a class="link-left" href="FURFACTOR sleek neutral cat.html">MORE SLEEK </a>
 
+<a class="link-top" href="FURFACTOR neutral crazy cat.html">MORE CRAZY </a>
 
-<a href="FURFACTOR sleek neutral cat.html">MORE SLEEK </a>
+<a class="link-right" href="FURFACTOR furry neutral cat.html">MORE FURRY </a>
 
-<a href="FURFACTOR neutral crazy cat.html">MORE CRAZY </a>
-
-<a href="FURFACTOR furry neutral cat.html">MORE FURRY </a>
-
-<a href="FURFACTOR neutral sleepy cat.html">MORE SLEEPY </a>
+<a class="link-bottom" href="FURFACTOR neutral sleepy cat.html">MORE SLEEPY </a>
 
 </body>
 </html>
