--- a/FURFACTOR/FURFACTOR neutral sleepy cat.html
+++ b/FURFACTOR/FURFACTOR neutral sleepy cat.html
@@ -6,13 +6,20 @@
 </head>
 
 <body>
-  <img src="images/Homepage_image.png" class="full-screen" />
-
-<h1> IM READY TO LOOK AT CATS </h2>
+  <img src="images/Neutral asleep cat.jpeg" class="full-screen" />
 
 
 
-<a href="index.html">HOME </a>
+
+
+
+<a class="link-left" href="FURFACTOR sleek asleep cat.html">MORE SLEEK </a>
+
+<a class="link-top" href="FURFACTOR neutral neutral cat.html">MORE CRAZY </a>
+
+<a class="link-right" href="FURFACTOR furry sleepy cat.html">MORE FURRY </a>
+
+
 
 </body>
 </html>
