--- a/FURFACTOR/FURFACTOR sleek asleep cat.html
+++ b/FURFACTOR/FURFACTOR sleek asleep cat.html
@@ -12,7 +12,15 @@
 
 
 
-<a href="index.html">HOME </a>
+
+
+<a class="link-top" href="FURFACTOR sleek neutral cat.html">MORE CRAZY </a>
+
+<a class="link-right" href="FURFACTOR neutral sleepy cat.html">MORE FURRY </a>
+
+
+
+
 
 </body>
 </html>
