--- a/FURFACTOR/FURFACTOR sleek neutral cat.html
+++ b/FURFACTOR/FURFACTOR sleek neutral cat.html
@@ -12,7 +12,11 @@
 
 
 
-<a href="index.html">HOME </a>
+<a class="link-top" href="FURFACTOR sleek crazy cat.html">MORE CRAZY </a>
+
+<a class="link-right" href="FURFACTOR neutral neutral cat.html">MORE FURRY </a>
+
+<a class="link-bottom" href="FURFACTOR sleek asleep cat.html">MORE SLEEPY </a>
 
 </body>
 </html>
