Added div class and container in body saying HELLO FrIDAY CLASS

--- a/FRIDAY/index.html
+++ b/FRIDAY/index.html
@@ -29,6 +29,10 @@ crossorigin="anonymous">
 
  <body>
 
+    <div class="container">
+    <h1> Hello Friday class</h1>
+    </div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
