--- a/FRIDAY/index.html
+++ b/FRIDAY/index.html
@@ -30,7 +30,14 @@ crossorigin="anonymous">
  <body>
 
     <div class="container">
-    <h1> Hello Friday class</h1>
+        <div class="row">
+            <div class="col-md-6">
+                <h1> hello friday class</h1>
+            </div>
+            <div class="col-md-6">
+                <h1> hello teacher</h1>
+            </div>
+        </div>
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
