we added 7 columns

--- a/FRIDAY/index.html
+++ b/FRIDAY/index.html
@@ -38,6 +38,23 @@ crossorigin="anonymous">
                 <h1> hello teacher</h1>
             </div>
         </div>
+        <div class="row">
+           <div class="col-md-3"></div>
+
+  <h1> hello teacher</h1>
+           <div class="col-md-3"></div>
+             <h1> You</h1>
+           <div class="col-md-1"></div>
+             <h1> should</h1>
+           <div class="col-md-1"></div>
+             <h1> eat</h1>
+           <div class="col-md-1"></div>
+             <h1> lunch</h1>
+           <div class="col-md-2"></div>
+             <h1> very</h1>
+           <div class="col-md-1"></div>
+             <h1> soon</h1>
+        </div>
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
