--- a/FRIDAY/index.html
+++ b/FRIDAY/index.html
@@ -38,10 +38,13 @@ crossorigin="anonymous">
                 <h1> hello teacher</h1>
             </div>
         </div>
-        <div class="row">
-           <div class="col-md-3"></div>
 
-  <h1> hello teacher</h1>
+
+        <div class="row">
+           <div class="col-md-3">
+            <h1> hello teacher</h1>
+           </div>
+
            <div class="col-md-3">
             <h1> You</h1>
            </div>
